--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ body {
 }
 
 .card {
-    background-color: #d7d7d7;
+    background-color: #e1e6f6;
     padding: 30px;
     border-radius: 45px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -232,19 +232,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.icon-container.green {
-    background-color: #d4edda;
-}
-.icon-container.blue {
-    background-color: #cce5ff;
-}
-.icon-container.yellow {
-    background-color: #fff3cd;
-}
-.icon-container.pink {
-    background-color: #fadadd;
+    background-color: #aebef1;
 }
 
 .icon {
@@ -262,7 +250,7 @@ body {
 .intro-history-card {
 
   position: relative;          
-  background:#d9d9d9;
+  background:#e1e6f6;
   border-radius:36px;
   width:87%;
   padding:24px 24px 24px 40px;  
@@ -302,7 +290,7 @@ body {
 }
 
 .leader-card {
-    background-color: #d9d9d9;
+    background-color: #e1e6f6;
     border-radius: 25px;
     padding: 20px;
     width: 320px;
@@ -375,7 +363,7 @@ body {
   width: 100%;
   max-width: 1200px;
   margin: 0 auto 80px;
-  background: #d9d9d9;
+  background: #e1e6f6;
   border-radius: 44px;
   padding: 56px 48px;          /* 좌우/상하 여백 */
   box-sizing: border-box;
@@ -434,7 +422,7 @@ body {
   width: 100%;
   max-width: 1200px;
   margin: 0 auto 80px;
-  background: #d9d9d9;
+  background: #e1e6f6;
   border-radius: 44px;
   padding: 40px 48px;
   box-sizing: border-box;
@@ -478,7 +466,7 @@ body {
 /* Activities Section */
 .activities-section {
     padding: 50px 0;
-    background-color: #f0f0f0;
+    background-color: #ffffff;
 }
 
 .activities-nav {
@@ -495,7 +483,7 @@ body {
 }
 
 .activity-card {
-    background-color: #fff;
+    background-color: #e1e6f6;
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     padding: 20px;
@@ -575,7 +563,7 @@ body {
 
 .recruitment-card {
     position: relative;
-    background: #d9d9d9;
+    background: #e1e6f6;
     border-radius: 15px;
     width: 100%;
     padding: 24px 24px 24px 40px;
@@ -625,7 +613,7 @@ body {
 }
 
 .outer-card {
-    background: #d9d9d9;
+    background: #e1e6f6;
     border-radius: 15px;
     padding: 10px;
     flex: 1;
@@ -644,16 +632,12 @@ body {
 }
 
 .card-label-1 {
-    background: #7ed957;
-    color: white;
-}
-
-.card-label-2 {
-    background: #38b6ff;
-    color: white;
+    background: #aebef1;
+    color: black;
 }
 
 /*Design-11 card-label 수정 및 색 추가*/
+/*Desing-14 색 전면 수정*/
 
 .inner-card {
     background: white;
@@ -677,7 +661,7 @@ body {
 
 .apply-card {
     position: relative;
-    background: #d9d9d9;
+    background: #e1e6f6;
     border-radius: 15px;
     padding: 50px;
     text-align: center;
@@ -688,7 +672,7 @@ body {
 }
 
 .apply-box {
-    background: #d9d9d9;
+    background: #e1e6f6;
     border-radius: 15px;
 
     display: flex;
@@ -740,18 +724,8 @@ body {
     gap: 4px;
 }
 
-.apply-button {
-    background: transparent;
-    border: 2px solid #545454;
-    border-radius: 25px;
-    padding: 8px 20px;
-    cursor: pointer;
-    font-size: 1rem;
-}
-
-
 .FAQ-box {
-    background: #d9d9d9;
+    background: #e1e6f6;
     border-radius: 15px;
     display: flex;
     flex-direction: column;   
@@ -783,7 +757,7 @@ body {
 /* Notices Section */
 .notices-section {
     padding: 50px 0;
-    background-color: #f0f0f0;
+    background-color: #ffffff;
 }
 
 .notices-nav {
@@ -863,7 +837,7 @@ body {
 
 .event-image-placeholder {
     height: 250px;
-    background-color: #919191;
+    background-color: #e1e6f6;
     margin-bottom: 15px;
     border-radius: 2.5%;
 }
@@ -894,22 +868,22 @@ body {
 
 /* Common Button Style */
 .nav-button {
-    background-color: #d9d9d9;
+    background-color: #e1e6f6;
     border: none;
     padding: 10px 40px;
     border-radius: 20px;
     cursor: pointer;
     font-size: 1em;
-    color: #fff;
+    color: #black;
 }
 
 .nav-button:hover {
-    background-color: #34568b;
+    background-color: #004aad;
     color: #fff;
 }
 
 .nav-button.active {
-    background-color: #34568b;
+    background-color: #004aad;
     color: #fff;
 }
 
@@ -1000,12 +974,14 @@ strong {
 
 .about-header {
     display: block;
-    background-color: #6e6e6e; /* 회색 배경 */
-    color: white;
+    background-color: #e1e6f6;
+    color: #black;
     padding: 2rem 1rem;
     text-align: center;
     border-radius: 0 0 8px 8px; /* 아래쪽 모서리 둥글게 */
 }
+
+/*Design-14 색수정*/
 
 .about-title {
     font-size: 1.5rem;
@@ -1017,7 +993,7 @@ strong {
     max-width: 700px;
     margin: 0 auto;
     line-height: 1.5;
-    color: #f1f1f1;
+    color: #black;
 }
 
 .quoteidx-block {
