--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     padding: 0;
     color: #333;
-    background-color: #fcfcfc;
+    background-color: white;
 }
 
 .container {
@@ -78,7 +78,7 @@ body {
 /* Intro Section */
 
 .intro-section {
-    background-color: #fcfcfc;
+    background-color: white;
     padding-bottom: 50px;
     padding-top: 0px;
     text-align: center;
@@ -95,7 +95,7 @@ body {
     height: 600px;
     width: 100%;
     padding: 50px 0;
-    color: #fff;
+    color: white;
     text-align: center;
     font-weight: 100;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
@@ -482,7 +482,7 @@ body {
 /* Activities Section */
 .activities-section {
     padding: 50px 0;
-    background-color: #f0f0f0;
+    background-color: white;
 }
 
 .activities-nav {
@@ -784,7 +784,7 @@ body {
 /* Notices Section */
 .notices-section {
     padding: 50px 0;
-    background-color: #f0f0f0;
+    background-color: white;
 }
 
 .notices-nav {
@@ -810,7 +810,7 @@ body {
 }
 
 .notices-table th {
-    background-color: #f2f2f2;
+    background-color: white;
     font-weight: 700;
 }
 
