--- a/style.css
+++ b/style.css
@@ -817,7 +817,7 @@ body {
 }
 
 .notices-table th {
-    background-color: #f2f2f2;
+    background-color: white;
     font-weight: 700;
 }
 
@@ -906,7 +906,7 @@ body {
     border-radius: 20px;
     cursor: pointer;
     font-size: 1em;
-    color: #black;
+    color: black;
 }
 
 .nav-button:hover {
@@ -1014,10 +1014,10 @@ strong {
     white-space: nowrap;
 } */
 
-.about-header {
+.top-header {
     display: block;
     background-color: #e1e6f6;
-    color: #black;
+    color: black;
     padding: 2rem 1rem;
     text-align: center;
     border-radius: 0 0 8px 8px;
@@ -1036,7 +1036,7 @@ strong {
     max-width: 700px;
     margin: 0 auto;
     line-height: 1.5;
-    color: #black;
+    color: black;
 }
 
 .quoteidx-block {
